--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,7 +103,7 @@
                 android:text="@string/signin_facebook"
                 android:textColor="@color/colorWhite" />
 
-            <Button
+         <!--   <Button
                 android:id="@+id/twitter_login_button"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -112,7 +112,7 @@
                 android:layout_marginStart="20dp"
                 android:background="@drawable/btn_signin_twitter"
                 android:text="@string/signin_twitter"
-                android:textColor="@color/colorWhite" />
+                android:textColor="@color/colorWhite" />-->
         </LinearLayout>
 
 </RelativeLayout>
