--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -18,7 +18,7 @@
     <item
         android:id="@+id/action_favorite_alarm"
         android:enabled="true"
-        android:icon="@drawable/ic_favorite_border"
+        android:icon="@drawable/ic_favourite"
         android:title="@string/favorite" />
     <item
         android:id="@+id/action_account"
