--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -5,11 +5,13 @@
     android:layout_height="50dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
+
     <ImageView
         android:id="@+id/commentviewitem_imageview_profile"
         android:layout_width="35dp"
+        android:layout_margin="7.5dp"
         android:layout_height="35dp"
-        android:layout_margin="7.5dp" />
+        android:src="@mipmap/ic_launcher" />
     <TextView
         android:id="@+id/commentviewitem_textview_profile"
         android:layout_width="wrap_content"
